[build-system]
requires = [
    "hatchling",
    "jupyterlab~=3.1",
]
build-backend = "hatchling.build"

[project]
name = "jupyterlite-p5-kernel"
description = "JupyterLite - p5.js Kernel Extension"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "JupyterLite Contributors", email = "" },
]
keywords = [
    "Jupyter",
    "JupyterLab",
    "JupyterLab3",
]
classifiers = [
    "Framework :: Jupyter",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = []
version = "0.1.0a12"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/jupyterlite/p5-kernel"

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlite_p5_kernel/labextension/static" = "share/jupyter/labextensions/@jupyterlite/p5-kernel-extension/static"
"install.json" = "share/jupyter/labextensions/@jupyterlite/p5-kernel-extension/install.json"
"jupyterlite_p5_kernel/labextension/package.json" = "share/jupyter/labextensions/@jupyterlite/p5-kernel-extension/package.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = [
    "hatch-jupyter-builder>=0.8.2",
]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlite_p5_kernel/labextension/static/style.js",
    "jupyterlite_p5_kernel/labextension/package.json",
]
skip-if-exists = [
    "jupyterlite_p5_kernel/labextension/static/style.js",
]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_dir = "jupyterlite_p5_kernel/labextension"
build_cmd = "build"
npm = [
    "jlpm",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = [
    "jlpm",
]

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]

[tool.tbump.version]
current = "0.1.0a12"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\""
